Bug 36469: Fix conflict between _header.scss and addbiblio.css tab style
addbiblio.css adds padding to tab panes specific for that interface, and
the header search form should not pick up that style. This patch adds
some specificity to _header.scss to avoid unwanted padding.

To test, apply the patch and rebuild the staff interface CSS
(https://wiki.koha-community.org/wiki/Working_with_SCSS_in_the_OPAC_and_staff_interface).

- Go to Cataloging -> New record (using the basic MARC editor).
  - The style of the MARC edit form should look correct.
  - The header search form should look correct
- Test other pages with tabs to confirm that there are no other unwanted
  side-effects, e.g. Circulation -> Check out; Advanced catalog search;
  Bibliographic detail page.

--- a/koha-tmpl/intranet-tmpl/prog/css/src/_header.scss
+++ b/koha-tmpl/intranet-tmpl/prog/css/src/_header.scss
@@ -244,6 +244,10 @@ a.navbar-toggle {
 
     &.toptabs {
         margin-top: 0;
+
+        .tab-pane {
+            padding: 0;
+        }
     }
 
     .nav-tabs {
